[package]
name = "bluejay-rb"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5.3", features = ["rb-sys-interop"] }
rb-sys = { version = "0.9.77", features = ["global-allocator"] }
once_cell = "1.17"
convert_case = "0.6.0"
itertools = "0.10.5"
strum = { version = "0.24", features = ["derive"] }
indexmap = "1.9.3"
paste = "1.0"
bluejay-parser = { git = "https://github.com/adampetro/bluejay", rev = "59474cd64ee417c2d59227fe8f642f034f3e0d00" }
bluejay-core = { git = "https://github.com/adampetro/bluejay", rev = "59474cd64ee417c2d59227fe8f642f034f3e0d00" }
bluejay-printer = { git = "https://github.com/adampetro/bluejay", rev = "59474cd64ee417c2d59227fe8f642f034f3e0d00" }
bluejay-validator = { git = "https://github.com/adampetro/bluejay", rev = "59474cd64ee417c2d59227fe8f642f034f3e0d00" }
bluejay-visibility = { git = "https://github.com/adampetro/bluejay", rev = "59474cd64ee417c2d59227fe8f642f034f3e0d00" }
