[package]
name = "bluejay-rb"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5.4", features = ["rb-sys-interop"] }
rb-sys = { version = "0.9.81", features = ["global-allocator", "stable-api-compiled-fallback"] }
once_cell = "1.17"
convert_case = "0.6.0"
itertools = "0.10.5"
strum = { version = "0.24", features = ["derive"] }
indexmap = "1.9.3"
paste = "1.0"
bluejay-parser = { git = "https://github.com/adampetro/bluejay", rev = "7d09f81aa42be3f2569a9e4d9fedf6577e8a299e" }
bluejay-core = { git = "https://github.com/adampetro/bluejay", rev = "7d09f81aa42be3f2569a9e4d9fedf6577e8a299e" }
bluejay-printer = { git = "https://github.com/adampetro/bluejay", rev = "7d09f81aa42be3f2569a9e4d9fedf6577e8a299e" }
bluejay-validator = { git = "https://github.com/adampetro/bluejay", rev = "7d09f81aa42be3f2569a9e4d9fedf6577e8a299e" }
bluejay-visibility = { git = "https://github.com/adampetro/bluejay", rev = "7d09f81aa42be3f2569a9e4d9fedf6577e8a299e" }
